# tinydi

./: .clang-format  .editorconfig  CMakeLists.txt  LICENSE  README.md
cmake/: tinydi-config.cmake.in
example/: CMakeLists.txt  default-arg.cpp
include/tinydi/: tinydi.h
test/: CMakeLists.txt  DefaultInjectorTest.cpp  InjectorTest.cpp  LazyHandleTest.cpp  StaticMappingTest.cpp  tinydi_impl.cpp
